Fixed card spacing

--- a/keyswitchv2/src/components/keyboards/KeyboardItem.module.css
+++ b/keyswitchv2/src/components/keyboards/KeyboardItem.module.css
@@ -4,7 +4,7 @@
 }
 
 .kbcard {
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
     flex-direction: row;
     width: 350px;
     padding: 1px;
